...
          tabBarIcon: ({ color, size }) => <Clock3 size={size} color={color} strokeWidth={2.2} />,
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
          title: 'More',
          tabBarIcon: ({ color, size }) => <MoreHorizontal size={size} color={color} strokeWidth={2.2} />,
        }}
      />
    </Tabs>
    </SafeAreaInsetsContext.Provider>
      <OfflineBanner />
...
